--- a/source/_posts/蝶式套利策略.md
+++ b/source/_posts/蝶式套利策略.md
@@ -1,62 +1,62 @@
 ---
-title: 构建一个蝶式套利策略
+title: Constructing a Butterfly Arbitrage Strategy
 date: 2023-07-24 11:38:00
-categories:
-  - 量化交易
-tags:
-  - 策略
-  - 套利
-  - 量化交易
-  - python
-  - 跨期套利
-  - 高频策略
-  - 波动
-description: '同时持有三份合约，以中间周期的合约为身，短期合约和长期合约为翅膀，构成了一个蝶式套利策略，本文从历史数据上分析策略是否成立，以及预期收益'
+categories: 
+  - Quantitative Trading
+tags: 
+  - Strategy
+  - Arbitrage
+  - Quantitative Trading
+  - quantitative trading
+  - Cross-period arbitrage
+  - High Frequency Strategies
+  - Volatility
+description: Holding three contracts at the same time, with the intermediate-period contract as the body, and the short-term and long-term contracts as the wings, constitutes a butterfly arbitrage strategy, and this paper analyzes whether the strategy is valid and the expected returns from historical data
 cover: https://s2.loli.net/2023/07/24/r3tMkb6wBN2ZnOI.jpg
 ---
 
-## 策略原理
+## Strategy Principle
 
-币安币本位合约如BTC、ETH等同时存在三个合约，即永续BTCUSD_PERP、当季BTCUSD_200925、次季BTCUSD_201225。
+The CoinSafe coin localization contracts such as BTC, ETH, etc. exist in three contracts at the same time, namely the perpetual BTCUSD_PERP, the current season BTCUSD_200925, the next season BTCUSD_201225.
 
-永续合约可以当作现货，一般两个合约做对冲共有三个差价：当季-永续、次季-永续、次季-当季。蝶式套利需要操作三个合约，差价为（次季-当季）-（当季-永续），即差价=次季+永续-2*当季。做多差价需要开做多一份的次季和永续合约，做空2份的当季合约。
+Perpetual contract can be treated as spot, generally two contracts to do hedging a total of three spreads: the current season - perpetual, the next season - perpetual, the next season - the current season. Butterfly arbitrage need to operate three contracts, the difference is (next quarter - current quarter) - (current quarter - perpetual), that is, the difference = next quarter + perpetual - 2 * current quarter. To go long the spread you need to open long one of the next quarter and perpetual contracts and short 2 of the current quarter contracts.
 
-## 策略参数
+## Strategy parameters
 
-- 交易币种：需要同时存在永续、当季、次季三个品种。
-- 下单张数：每格网格的下单张数。
-- 网格开单差价：每偏离一个差价，做多或做空一份。
-- 差价平滑参数Alpha：用于计算差价的均值，可用默认，也可自己回测。
-- 冰山委托张数：如果开仓张数太大，为减少单腿现象，可以设置每次最小开单张数，缺点是抢差价不及时。不需要冰山委托此参数设置和下单张数一样。
+- Currency of transaction: the need to exist at the same time the perpetual, the current quarter, the next quarter of the three varieties.
+- Number of orders: the number of orders per grid.
+- Grid opening spread: for each deviation from the spread, go long or short by one.
+- Spread smoothing parameter Alpha: used to calculate the average value of the spread, available by default, you can also backtest.
+- Iceberg commissioned by the number of sheets: If the number of open positions is too large, in order to reduce the phenomenon of single-leg, you can set the minimum number of sheets each time, the disadvantage is that the grab spreads are not timely. Do not need Iceberg entrusted this parameter settings and the same number of sheets.
 
-如差价的均线是100，当前差价是200，下单张数是2，网格开单差价是30，则此时的持仓为：次季空6张，永续空6张，当季多12张。
+If the average of the spread is 100, the current spread is 200, the number of orders is 2, the grid open single spread is 30, then the position at this time: the next quarter empty 6, perpetual empty 6, more than 12 in the current season.
 
-## 注意事项
+## Notes:
 
-- 交割合约需单向持仓,不能同时持有多空。
-- 保证金采用全仓模式。
-- 非无脑运行策略,需理解原理后谨慎测试。
-- 回测不等于实盘,无需过分优化参数。
-- 网格开单价差要覆盖手续费,如手续费万2,比特币1万,则大于16。
-- 临近交割,当季-永续时间差拉大,当季贴近永续,实为次季与永续套利,需停止或观察。新合约同理。
-- 采用IOC订单,无法完全成交的部分直接撤销,无需手动撤单。
-- 可简单修改为当季与永续或次季与永续套利。
-- 策略不会高频开平仓,有可能一天无单。
-- 统计平均差价从运行开始,不追溯历史。
-- 单腿情况可能存在,可自行优化。 
-- 滑价对小仓无影响,大仓需自行优化,如冰山委托。
+- Delivery contracts need to be one-way position, can not hold both long and short.
+- Margin is in full position mode.
+- The margin is in full position mode. It is not a no-brainer to run the strategy, and it is necessary to understand the principle and test it carefully.
+- Backtesting is not the same as real trading, no need to over-optimize the parameters.
+- Grid opening spread to cover the handling fee, such as the handling fee of 12,000, bitcoin 10,000, it is greater than 16.
+- As we approach settlement, the time difference between the current quarter and the perpetual is widening, and the current quarter is close to the perpetual, which is actually an arbitrage between the next quarter and the perpetual, so we need to stop or observe. The same applies to new contracts.
+- With IOC orders, the part of the order that cannot be fully filled is canceled directly, without the need to manually cancel orders.
+- Can be simply modified to current quarter and perpetual or next quarter and perpetual arbitrage.
+- The strategy does not open and close positions with high frequency, and it is possible that there will be no orders for a day.
+- The average spread is calculated from the beginning of the run and does not go back in history.
+- Single-leg situation may exist, can be optimized. 
+- Slippage has no effect on small positions, but large positions need to be optimized, such as iceberg commissions.
 
-## 历史数据观察
+## Historical data observation
 
-做多价差 = 做多1份 次季 + 永续  做空 2份 当季合约
+Long spread = Long 1 next quarter + perpetual short 2 current quarter contracts.
 
-做空价差 = 做空1分 次季 + 永续  做空 2份 当季合约
+Short spread = 1 point short next quarter + perpetual short 2 current quarter contracts
 
-### 历史数据分析
+### Historical data analysis
 
-碟式套利的利润来源在于次季度的合约在牛市转为熊市出现恐慌的时候会领先下跌，价差急剧扩大，在恐慌过后发现是反应过度
+The source of profit for Disc Arbitrage is that the next quarter's contract will fall ahead of the bull to bear panic, the spread widens dramatically, and after the panic is overreacted, the spread returns to its original trajectory.
 
-再回到原来的轨迹，价差再急剧缩小，带来的利润
+After the panic is overreacted, the spreads are found to have overreacted and return to their original trajectory, and the spreads are drastically narrowed again, bringing in profits.
 
 ```python
 df['ETHUSD_PERP'].dropna().plot(figsize=(15,6),grid=True) 
@@ -64,14 +64,14 @@ df['ETHUSD_210625'].dropna().plot(figsize=(15,6),grid=True)
 df['ETHUSD_210924'].dropna().plot(figsize=(15,6),grid=True)
 ```
 
-#### 输出：
+#### Output:
 
 ![](https://s2.loli.net/2023/07/24/gmJYNyahovz8QOl.png)
 
-#### 回测引擎：
+#### Backtesting engine:
 
 ```python
-# 回测引擎
+
 class Exchange:
     
     def __init__(self, trade_symbols, leverage=20, maker_fee=0.0002,taker_fee=0.0004,log='',initial_balance=10000):
@@ -153,7 +153,7 @@ class Exchange:
         self.account['USDT']['leverage'] = round(self.account['USDT']['margin']*self.leverage/self.account['USDT']['total'],4)
 ```
 
-#### 交易品种收益计算代码（btc为例）：
+#### The code for calculating the return on the traded variety (btc for example):
 
 ```python
 trade_symbols = ['BTCUSD_210924', 'BTCUSD_210625', 'BTCUSD_PERP']
@@ -183,49 +183,53 @@ e.df = pd.DataFrame(index=df[trade_symbols].dropna().index,columns=['margin','pr
 e.df['profit'].plot(figsize=(15,6),grid=True);
 ```
 
-#### BTC价差
+#### BTC Spreads
 ![](https://s2.loli.net/2023/07/26/j8ulkyImUTr5DVb.png)
 
-#### ETH价差
+#### ETH Spreads
 
 ![](https://s2.loli.net/2023/07/26/2EzmT9rfhS7BKxu.png)
 
-#### BTC 收益曲线
+#### BTC  Spreads
 
 ![](https://s2.loli.net/2023/07/26/HDFzydkhlm2RjWq.png)
 
-#### ETH收益曲线
+#### ETH earnings curve
 
 ![](https://s2.loli.net/2023/07/26/HnVAPiebg5Ro8uO.png)
 
-#### LINK 收益曲线
+
+
+#### LINK earnings curve
 
 ![](https://s2.loli.net/2023/07/26/KguYJeGmDIZHjCd.png)
 
-#### LTC收益曲线
+#### LTC earnings curve
 
 ![](https://s2.loli.net/2023/07/26/8dImQlAzvTcuq6y.png)
 
-#### XRP收益曲线
+#### XRP earnings curve
 
-![](https://s2.loli.net/2023/07/26/shIyGCM13xSKR5A.png)
+![xrp收益.png](https://s2.loli.net/2023/07/26/shIyGCM13xSKR5A.png)
 
-#### BNB收益曲线
+#### BNB earnings curve
 
 ![](https://s2.loli.net/2023/07/26/yxNoq8KrizQ6wIt.png)
 
-#### BCH收益曲线
+#### BCH earnings curve
 
 ![](https://s2.loli.net/2023/07/26/bCYUfsBXRzOwiqP.png)
 
-#### ADA收益曲线
+#### ADA earnings curve
 
 ![](https://s2.loli.net/2023/07/26/sr4f7hxCqbTWFQE.png)
 
-#### DOT收益曲线
+#### DOT earnings curve
 
 ![](https://s2.loli.net/2023/07/26/gCQtHSUf15PXpom.png)
 
-## 结论
 
-在写好代码的前提下，这个是可以盈利的策略，可以进行测试性质参与 
+
+## Conclusion
+
+With well-written code, this is a profitable strategy to test the nature of the engagement
