--- a/source/_posts/量化交易之股票历史数据收集(一).md
+++ b/source/_posts/量化交易之股票历史数据收集(一).md
@@ -1,62 +1,62 @@
 ---
-title: 量化交易之股票历史数据收集
+title: Quantitative trading of stock historical data collection
 date: 2023-08-11 16:01:00
-categories:
-  - 量化交易
+categories: 
+  - Quantitative Trading
 tags:
-  - 历史数据
-  - 趋势策略
-  - 震荡策略
-  - 低频策略
+  - Historical Data
+  - Trend Strategy
+  - Oscillators
+  - Low Frequency Strategies
   - quant
-  - 量化交易
+  - Quantitative Trading
   - quant1098.com
-  - 股票
-description: '对于低频或者中频交易来说，收集历史行情数据是开始量化交易的第一步，只有拥有足够的历史数据，你才能方便的回测自己的代码。也才有足够的信心上实盘'
+  - Stocks
+description: For low-frequency or mid-frequency trading, collecting historical market data is the first step to start quantitative trading, only with enough historical data, you can easily backtest your own code. Only then will you have enough confidence to go on live trading
 cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
 ---
 
-## 数据获取接口的选择
 
-获取股票的数据，一般来说可以有以下几种方法：
 
-1. tushare、baostock 、qstock等python库接口，优点是数据经过了整理清洗，获取比较方便，只需要一行命令就可以获得，缺点是往往有种种的限制条件，和精度不够，比如tushare就需要注册并获取积分才能使用，这几个库的最高免费时间精度都是5分钟，想获取颗粒度为1分钟的数据就需要自己想办法了
-2. 直接通过网页爬取相应的数据，这种方式比较自由，但是问题是，你不能断，一旦有一天你的爬虫服务器停摆，也就意味着你的数据很难接上，需要从别的数据源来补，问题是你既然有别的信息渠道，为啥一开始不用呢
-3. 通过股票交易软件下载数据， 然后转化成自己可以用的数据
-4. 直接购买~
+## Choice of data fetching interface
 
-下载完数据并不是事情的结束，最好还是保存在数据库中，方便多终端，随时调用。下面分别就着三种方式慢慢展开
+To get the data of stocks, generally speaking, there can be several methods:
 
-## 通过python库获取历史数据 下面以baostock为例
+1. tushare, baostock, qstock and other python library interface, the advantage is that the data has been sorted and cleaned, it is more convenient to get, only need a line of command can be obtained, the disadvantage is that there are often a variety of constraints, and the accuracy is not enough, for example, tushare need to register and get points to use, these libraries of the highest free time accuracy is 5 minutes, want to get the granularity of 1 minute data, you need to find a way to do it yourself. The maximum free time precision of these libraries is 5 minutes, so if you want to get the data with a granularity of 1 minute, you need to think of your own way!
+2. directly through the web page to crawl the corresponding data, this way is more free, but the problem is that you can not be broken, once one day your crawler server is down, which means that your data is difficult to pick up, you need to make up from other data sources, the problem is that you have other channels of information, why not use it in the beginning
+3. download the data through stock trading software, and then transform it into your own data.
+4. buy the data directly
 
-### 安装 baostock 库
+Downloading the data is not the end of the matter, it is best to save it in the database, so that it is convenient for multiple terminals and can be called at any time. Here are three ways to do this
+
+## Getting historical data via python library.
+
+### Install the baostock library.
 
 ```bash
-## 使用国内源安装
 pip install baostock -i https://pypi.tuna.tsinghua.edu.cn/simple/ --trusted-host pypi.tuna.tsinghua.edu.cn
 ```
 
-### 获取历史A股K线数据
+### Get historical A-share K-line data
 
 ```python
 import baostock as bs
 import pandas as pd
 
-#### 登陆系统 ####
+
 lg = bs.login()
-# 显示登陆返回信息
+
 print('login respond error_code:'+lg.error_code)
 print('login respond  error_msg:'+lg.error_msg)
 
-#### 获取沪深A股历史K线数据 ####
+
 start_date = '2017-07-01'
 end_date = '2017-12-31'
-# 详细指标参数，参见“历史行情指标参数”章节；“分钟线”参数与“日线”参数不同。“分钟线”不包含指数。
-# 分钟线指标
+
 min_param = "date,time,code,open,high,low,close,volume,amount,adjustflag"
-# 周月线指标
+
 meek_param = "date,code,open,high,low,close,volume,amount,adjustflag,turn,pctChg"
-# 日线指标 
+
 day_param = "date,code,open,high,low,close,preclose,volume,amount,adjustflag,turn,tradestatus,pctChg,isST"
 
 week_rs = bs.query_history_k_data_plus("sh.600000",
@@ -73,57 +73,49 @@ rs = min_rs
 print('query_history_k_data_plus respond error_code:'+rs.error_code)
 print('query_history_k_data_plus respond  error_msg:'+rs.error_msg)
 
-#### 打印结果集 ####
+
 data_list = []
 while (rs.error_code == '0') & rs.next():
-    # 获取一条记录，将记录合并在一起
+
     data_list.append(rs.get_row_data())
 result = pd.DataFrame(data_list, columns=rs.fields)
 
-#### 结果集输出到csv文件 ####   
 result.to_csv("D:\\history_A_stock_k_data.csv", index=False)
 print(result)
 
-#### 登出系统 ####
+
 bs.logout()
 ```
 
-### 获取估值指标(日频)
+### Access to valuation indicators (daily frequency)
 
 ```python
-## 登陆过程略
-#### 获取沪深A股估值指标(日频)数据 ####
-# peTTM    滚动市盈率
-# psTTM    滚动市销率
-# pcfNcfTTM    滚动市现率
-# pbMRQ    市净率
+
 rs = bs.query_history_k_data_plus("sh.600000",
     "date,code,close,peTTM,pbMRQ,psTTM,pcfNcfTTM",
     start_date='2015-01-01', end_date='2017-12-31', 
     frequency="d", adjustflag="3")
 print('query_history_k_data_plus respond error_code:'+rs.error_code)
 print('query_history_k_data_plus respond  error_msg:'+rs.error_msg)
-## 登出过程略
+
 ```
 
-### 除权除息信息：query_dividend_data()
+### Ex-rights and ex-dividend information: query_dividend_data()
 
 ```python
-## 登陆过程略
-#### 查询除权除息信息####
-# 查询2015年除权除息信息
+
 rs_list = []
 
-# 查询2017年除权除息信息
+
 rs_dividend_2017 = bs.query_dividend_data(code="sh.600000", year="2017", yearType="report")
 while (rs_dividend_2017.error_code == '0') & rs_dividend_2017.next():
     rs_list.append(rs_dividend_2017.get_row_data())
 
 result_dividend = pd.DataFrame(rs_list, columns=rs_dividend_2017.fields)
-## 登出过程略
+
 ```
 
-### 证券基本资料：query_stock_basic()
+### Basic information on securities：query_stock_basic()
 
 ```python
 ## 登陆过程略
@@ -135,11 +127,10 @@ print('query_stock_basic respond  error_msg:'+rs.error_msg)
 ## 登出过程略
 ```
 
-### 季频公司业绩快报：query_performance_express_report()
+### Quarterly frequency company performance snapshot:query_performance_express_report()
 
 ```python
-## 登陆过程略
-#### 获取公司业绩快报 ####
+
 rs = bs.query_performance_express_report("sh.600000", start_date="2015-01-01", end_date="2017-12-31")
 print('query_performance_express_report respond error_code:'+rs.error_code)
 print('query_performance_express_report respond  error_msg:'+rs.error_msg)
@@ -147,22 +138,24 @@ print('query_performance_express_report respond  error_msg:'+rs.error_msg)
 result_list = []
 while (rs.error_code == '0') & rs.next():
     result_list.append(rs.get_row_data())
-    # 获取一条记录，将记录合并在一起
-result = pd.DataFrame(result_list, columns=rs.fields)
-## 登出过程略
-```
-### 各个库的比较
 
-附图一张，尽在图中
+result = pd.DataFrame(result_list, columns=rs.fields)
+
+```
+
+### Comparison of libraries
+
+There's a picture attached. It's all in the picture.
+
 ![](https://s2.loli.net/2023/08/11/tocP7CUyva9Jq4W.jpg)
 
-## 通过网页爬取数据
+## Crawling data through web pages
 
-### 项目结构
+### Project structure
 
 ![wKioL1YyHhfTV5ZQAAE6J6--0Gg957.jpg](https://s2.loli.net/2023/08/11/vYcnltMV7wTfCPF.jpg)
 
-### 数据库连接池
+### database connection pool
 
 ```python
 ## connectionpool.py
@@ -173,12 +166,12 @@ create a connection pool
 from DBUtils import PooledDB
 import MySQLdb
 import string
-maxconn = 30            #最大连接数
-mincached = 10           #最小空闲连接
-maxcached = 20          #最大空闲连接
-maxshared = 30          #最大共享连接
-connstring="root#root#127.0.0.1#3307#pystock#utf8" #数据库地址
-dbtype = "mysql"                   #选择mysql作为存储数据库
+maxconn = 30            
+mincached = 10          
+maxcached = 20          
+maxshared = 30         
+connstring="root#root#127.0.0.1#3307#pystock#utf8"
+dbtype = "mysql"                  
 def createConnectionPool(connstring, dbtype):
     db_conn = connstring.split("#");
     if dbtype=='mysql':
@@ -191,7 +184,9 @@ def createConnectionPool(connstring, dbtype):
 pool = createConnectionPool(connstring, dbtype)
 ```
 
-### 数据库操作
+
+
+### database operation
 
 ```python
 ## DBOperator.py
@@ -297,7 +292,9 @@ class DBOperator(object):
             self.logger.error("Mysql Error %d: %s" % (e.args[0], e.args[1]))
 ```
 
-### 日志模块
+
+
+### log module
 
 ```python
 ## LoggerFactory.py
@@ -334,7 +331,9 @@ if __name__ == '__main__':
     getLogger("www").debug("www")
 ```
 
-### 获取股票历史数据- 单线程模式
+
+
+### Getting Stock Historical Data - Single Threaded Mode
 
 ```python
 ## stockyahoo.py
@@ -429,7 +428,9 @@ if __name__ == '__main__':
     main()
 ```
 
-### 获取股票历史数据- 多线程模式
+
+
+### Get stock history data - multi-threaded mode
 
 ```python
 #-*- coding: UTF-8 -*- 
@@ -642,87 +643,83 @@ if __name__ == '__main__':
     StockTencent(). main()
 ```
 
-### 几个常用的股票数据获取接口
+### A few commonly used interfaces for getting stock data
 
-####  简要信息
+####  Brief Information
 
-1、发送地址
+1. Sending address
 
-```
-http://qt.gtimg.cn/q=s_sh600519 // sh600519是贵州茅台的股票代码，根据自己的关键字拼接URL
-```
+   ```
+   http://qt.gtimg.cn/q=s_sh600519 // sh600519是贵州茅台的股票代码，根据自己的关键字拼接URL
+   ```
 
-2、收到信息
+   
 
-```
-v_s_sh600519="1~贵州茅台~600519~2075.95~42.95~2.11~38930~794942~~26078.04~GP-A";
-```
+2. Message received
 
-3、这里代表简要信息，就是我们拼接的股票代码，后面引号内是具体查找到的股票简要信息，以“~”号分割，股票的具体信息
+   ```
+   v_s_sh600519="1~贵州茅台~600519~2075.95~42.95~2.11~38930~794942~~26078.04~GP-A";
+   ```
 
-| 序号 | 返回值   | 含义                                                         |
-| ---- | -------- | ------------------------------------------------------------ |
-| 1    | 1        | 代表交易所，200-美股（us），100-港股（hk），51-深圳（sz），1-上海（sh） |
-| 2    | 贵州茅台 | 股票名字                                                     |
-| 3    | 600519   | 股票代码                                                     |
-| 4    | 2075.95  | 当前价格                                                     |
-| 5    | 42.95    | 涨跌                                                         |
-| 6    | 2.11     | 涨跌%                                                        |
-| 7    | 38930    | 成交量                                                       |
-| 8    | 794942   | 成交额                                                       |
-| 9    | 26078.04 | -                                                            |
-| 10   | GP-A     | 总市值                                                       |
+   
 
-#### 日K线数据  返回json格式
+3. Here represents the summary information, which is the stock code we spliced in, followed in quotes by the summary information of the specific stock found, separated by the "~" sign, the specific information of the stock
+
+   | 序号 | 返回值   | 含义                                                         |
+   | ---- | -------- | ------------------------------------------------------------ |
+   | 1    | 1        | Representative exchanges, 200-US (us), 100-HK (hk), 51-SZ (sz), 1-SH (sh) |
+   | 2    | 贵州茅台 | Stock Names                                                  |
+   | 3    | 600519   | stock code (computing)                                       |
+   | 4    | 2075.95  | current price                                                |
+   | 5    | 42.95    | rise or fall in price                                        |
+   | 6    | 2.11     | % increase/decrease                                          |
+   | 7    | 38930    | turnover                                                     |
+   | 8    | 794942   | turnover                                                     |
+   | 9    | 26078.04 | -                                                            |
+   | 10   | GP-A     | total market value                                           |
+
+#### Daily K-line data Returns json format
 
 ```python
-// 1. https://web.ifzq.gtimg.cn/appstock/app/fqkline/get 固定访问链接
-// 2. param=代码,日k，开始日期，结束日期，获取多少个交易日，前复权
-// 	2.1 usAAPL.OQ 股票代码，这里是us是美股，AAPL是苹果，“.OQ”是美股拼接后缀，其他不需要拼接
-// 	2.2 500代表获取多少个交易日，500实际查出来的是501条数据，多一条，
-//      2.3 开始日期，结束日期获取的条数大于设定的数量的话 按照结束日期前推条数，
-//      2.4 开始日期，结束日期获取的条数小于设定的数量的话 按照开始日期结束日期获取条数
-// 	2.5 qfq前复权
-// 
-// 美股，苹果【usAAPL】，需要拼接“.OQ”
-https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=usAAPL.OQ,day,2020-3-1,2021-3-1,500,qfq
-// 上海，茅台【sh600519】，不需要拼接“.OQ”
-https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=sh600519,day,2020-3-1,2021-3-1,500,qfq # 前复权
-https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=sh600519,day,2020-3-1,2021-3-1,500,hfq # 后复权
-https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=sh600519,day,2020-3-1,2021-3-1,500,bfq # 不复权
 
-// 港股，小米【hk01810】，不需要拼接“.OQ”
+https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=usAAPL.OQ,day,2020-3-1,2021-3-1,500,qfq
+
+https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=sh600519,day,2020-3-1,2021-3-1,500,qfq
+https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=sh600519,day,2020-3-1,2021-3-1,500,hfq 
+https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=sh600519,day,2020-3-1,2021-3-1,500,bfq 
+
+
 https://web.ifzq.gtimg.cn/appstock/app/fqkline/get?param=hk01810,day,2020-3-1,2021-3-1,500,qfq
 ```
 
-#### 分钟数据
+#### Minute data
 
 ```python
-//1分钟线 返回json格式
+
 http://web.ifzq.gtimg.cn/appstock/app/minute/query?code=sh600103
 
-//1分钟线 返回字符串 需要自己转换到json格式
+
 http://ifzq.gtimg.cn/appstock/app/kline/mkline?param=sz000413,m1,,32000&_var=m1_today
-//5分钟线
+
 http://ifzq.gtimg.cn/appstock/app/kline/mkline?param=sz000413,m5,,32000&_var=m5_today
-//15分钟线
+
 http://ifzq.gtimg.cn/appstock/app/kline/mkline?param=sz000413,m15,,32000&_var=m15_today
-//30分钟线
+
 http://ifzq.gtimg.cn/appstock/app/kline/mkline?param=sz000413,m30,,32000&_var=m30_today
-//60分钟线
+
 http://ifzq.gtimg.cn/appstock/app/kline/mkline?param=sz000413,m60,,32000&_var=m60_today
 
-//1分钟线 返回字符串 需要自己转换到json格式
+
 http://web.ifzq.gtimg.cn/appstock/app/minute/query?_var=min_data_sh600103&code=sh600103&r=0.12174363108800135
 ```
 
-## 通过股票软件获取历史数据
+## Getting Historical Data via Stock Software
 
-### 通过通达信下载数据到本地
+#### Download data to local via Tom Tom Tom
 
-这个就不用多说了吧
+I don't need to tell you more about this.
 
-### 运行下面的代码
+#### Run the following code
 
 ```python
 # coding: UTF-8
@@ -758,6 +755,6 @@ else:
     print('The for ' + pathdir + ' to ' + targetDir + ' loop is over')
 ```
 
-## 直接购买
+## Buying direct
 
-直接购买是做没有技术含量也是效率最高的，但是还是那句话 不忘初心 方得始终。有的人的目标是去罗马，有的人出生在罗马，这个是没有可比性的，愿我们早日到达心中的终点。一起加油~~
+Direct purchase is to do without technical content is also the most efficient, but still the words do not forget the beginning of the always. Some people's goal is Rome, some people were born in Rome, this is not comparable, may we soon reach the end of the heart.
