--- a/source/_posts/量化交易之数字货币历史数据收集(二).md
+++ b/source/_posts/量化交易之数字货币历史数据收集(二).md
@@ -1,58 +1,57 @@
 ---
-title: 量化交易之数字货币历史数据收集
+title: Quantitative trading of digital currency historical data collection
 date: 2023-08-11 18:01:00
-categories:
-  - 量化交易
-tags:
-  - 历史数据
-  - 趋势策略
-  - 震荡策略
-  - 低频策略
+categories: 
+  - Quantitative trading
+tags: 
+  - Historical Data
+  - Trend Strategy
+  - Oscillators
+  - Low Frequency Strategies
   - quant
-  - 量化交易
+  - Quantitative Trading
   - quant1098.com
-  - 数字货币
-description: '对于低频或者中频交易来说，收集历史行情数据是开始量化交易的第一步，只有拥有足够的历史数据，你才能方便的回测自己的代码。也才有足够的信心上实盘'
+  - Digital Currency
+description: For low-frequency or medium-frequency trading, collecting historical market data is the first step to start quantitative trading, only with enough historical data, you can easily backtest your own code. Only then will you have enough confidence to get on the live market
 cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
 ---
 
-上一期的股票历史数据的获取讲的有一点复杂，因此，准备这一次就简单讲讲同时提供一下代码
+The last installment on getting historical stock data was a bit complicated, so I'm going to keep it simple this time and provide the code.
 
-## 从交易所获取数据的方式和难度
+## How to get data from exchanges and how hard it is to do so.
 
-一般可以有这几种方式获取数据：
+There are several ways to get the data:
 
-### 交易所数据下载平台下载
+### Downloading data from an exchange
 
-这个比较简单，去比较大的交易所，比如biance okx这些都会有一个栏目叫历史数据下载，想要啥数据就有啥，最细的颗粒度是一分钟。再细的数据就要发邮件获取了，下好了需要的数据然后自己整理就好了，全程可视化，简单方便。唯一的缺点就是手工做的话有点烦
+This is relatively simple, go to the larger exchanges, such as biance okx these will have a section called historical data download, want to have what data, the most granularity is a minute. The finest granularity is one minute. If you want to send an email to get more detailed data, you can download the data you need and then organize it yourself, the whole process is visualized, simple and convenient. The only drawback is that it's a bit annoying if you do it manually.
 
-### 通过api的方式获取数据
+### Get data through api.
 
-这个有三种方式，
+There are three ways to do this.
 
-1. 通过ccxt这个库来下载
+1. Download via the library ccxt
 
    ```python
-   ## ccxt的安装
+   
    pip install ccxt
    
-   ## ccxt的引入pyton3.5.3版本以上支持
+   
    import ccxt.async_support as ccxt
    
-   ## 实例化交易所
+   
    binance = ccxt.binance()
    
-   ## 市场载入
+   
    binance.load_markets()
    
-   ## 获取订单薄
    import time
    delay = 2 # seconds
    for symbol in exchange.markets:
        print (exchange.fetch_order_book (symbol))
        time.sleep (delay) # rate limit
        
-   ## 获取k线
+   
    import time
    if exchange.has['fetchOHLCV']:
        for symbol in exchange.markets:
@@ -61,10 +60,10 @@ cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
    
    ```
 
-   实盘可以运行的ccxt获取历史K线代码 自动保存到数据库
+   Real trading can run ccxt to get the history of the K line code automatically saved to the database
 
    ```python
-   # 定义相关参数和变量
+   
    exchange = ccxt.binance()
    exchange_str = 'binance'
    
@@ -79,8 +78,7 @@ cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
    start_time = str_to_timestamp(start_time_str)
    symbols = get_symbol(exchange_str)
    
-   # 定义相关mysql 语句
-   # 创建表 主键是id 自增
+   
    create_table_templates = """
            create table templates(
            id int(8) AUTO_INCREMENT,
@@ -94,21 +92,21 @@ cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
            )
        """
    
-   # 定义数据库的相关链接 pandas 的链接方式
+   
    engine_str = f'mysql+pymysql://{mysql_user}:{mysql_passwd}@{host_name}:{host_port}/{db_name}'
    engine = create_engine(engine_str)
    
-   # 初始化数据库连接，使用pymysql模块
+   
    db = pymysql.connect(host=host_name, port=host_post,
                             user=mysql_user, passwd=mysql_passwd,
                             db=db_name, charset="utf8")
-   # 使用 cursor() 方法创建一个游标对象 cursor
+   
    con = db.cursor()
-   # 选择数据库操作
+   
    con.execute('use'+' ' + db_name)
    
    
-   # 检查数据表是否存在
+   
    def table_exists(con, table_name):
        sql = "show tables;"
        con.execute(sql) # 执行sql语句
@@ -116,36 +114,35 @@ cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
        table_list = re.findall('(\'.*?\')', str(tables))
        table_list = [re.sub("'", '', each) for each in table_list]
        if table_name in table_list:
-           return 1 #存在返回1
+           return 1 
        else:
-           return 0 #不存在返回0
+           return 0
    
    if __name__ == "__main__":
        while True:
            sql_insert_time_templates = """ insert into templates(open_time_GMT8) values(date_sub(now(), interval 3 hour)) """
            engine_str = f'mysql+pymysql://{mysql_user}:{mysql_passwd}@{host_name}:{host_port}/{db_name}'
            engine = create_engine(engine_str)
-           # 初始化数据库连接，使用pymysql模块
+           
            db = pymysql.connect(host=host_name, port=host_post,
                                     user=mysql_user, passwd=mysql_passwd,
                                     db=db_name, charset="utf8")
-           # 使用 cursor() 方法创建一个游标对象 cursor
+          
            con = db.cursor()
-           # 选择数据库操作
+   
            con.execute('use'+' ' + db_name)
        
            for symbol in symbols[:]:
-               # print(symbol)
-               # exit()
-               symbol_str = symbol.replace('/', '_')  # 处理交易对格式 将BTC/USDT,改为 BTC_USDT格式
-               symbol_str = symbol_str.replace('-', '_')  # 处理交易对格式 将BCH-USD-191018,改为 BCH_USD_191018格式
+   
+               symbol_str = symbol.replace('/', '_')  
+               symbol_str = symbol_str.replace('-', '_')  
                exchange_symbol = exchange_str + "_" + symbol_str
                sql = create_table_templates.replace('templates', exchange_symbol)
    
-               # 首先检查所在表是否存在
+   
                if (table_exists(con, exchange_symbol) != 1):
                    con.execute(sql)
-                   # 获取交易对日线k线 取出第一天作为日期数据写入
+                  
                    day_kline_data = exchange.fetch_ohlcv(symbol, timeframe='1d', limit=1000, since=start_time)
                    day_kline_data_df = pd.DataFrame(day_kline_data)
                    day_kline_data_df.rename(columns={0: 'MTS', 1: 'open', 2: 'high', 3: 'low', 4: 'close', 5: 'volume'},
@@ -158,20 +155,19 @@ cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
                    day_kline_data_df.to_sql(name=exchange_symbol, con=engine, if_exists='append', index=False)
                    # print(day_kline_data_df.iloc[1:2])
                    print(exchange_symbol, '初始数据成功写入！')
-                   db.commit()  # 写入后需要提交，才能更新数据库索引结
+                   db.commit() 
                    # exit()
-               # 如果存在，获取最后日期，开始写入
                else:
                    try:
                        sql_time_templates = "select * from templates order by open_time_GMT8 desc limit 0,1;"
                        sql_time = sql_time_templates.replace('templates', exchange_symbol)
    
-                       # index_col 指定索引 parse_dates 指定时间格式
+                      
                        # df_sql = pd.read_sql(sql_time, db, index_col="id", parse_dates=['open_time_GMT8'])
                        df_sql = pd.read_sql(sql_time, db, parse_dates=['open_time_GMT8'])
-                       # 把最后的时间取出  并转换为时间戳格式
+   
                        sql_last_time = ' '.join(str(i) for i in df_sql['open_time_GMT8'])
-                       # 如果表内没有获取到时间值 那么删除当前表
+   
                        if any(sql_last_time) is False:
                            sql_del_table_templates = "drop table templastes;"
                            sql_del_table = sql_del_table_templates.replace('templates', 'exchange_symbol')
@@ -186,63 +182,77 @@ cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
                        print('错误类型是', e.__class__.__name__)
                        print('错误明细是', e)
            print('现在时间', datetime.now(), '休息8小时后继续')
-           # 关闭游标链接
+   
            con.close()
-           # 关闭数据库链接
+   
            db.close()   
            time.sleep(8*3600)
-           # print('休息一天后继续')
+   
    ```
-2. 通过交易所的api下载
+
+   
+
+2. Download via exchange api
+
    ```python
-   ## 参见每个交易所的api 文档，每个交易所的文档都大同小异。推荐历史数据的获取使用rest api 方式。在交易过程中的数据获取使用webstock订阅的方式，最大限度节约自己跟服务器的资源。
+   ## See the api documentation for each exchange, which is similar to each other. It is recommended to use rest api to get historical data. During the trading process, we use webstock subscription to get the data, to maximize the resources of the server and yourself.
    ```
+
+   
+
 3. 通过自己编码请求获取数据
 
    现在大部分都转向自有框架下载数据了吧，好处是可以高度自有话，想怎么搞就怎么搞，方便随心，想存文件就存文件。想放数据库 就放数据库。缺点就是数据的清洗整理。校验的责任必须要搞明白，否则，就成了那句名言： 进垃圾，出垃圾。
 
    下面，我提供一套简单的下载代码
 
+4. 
+
    ```python
        from urllib.request import urlopen, Request
        import json
        import pandas as pd
-       pd.set_option('expand_frame_repr', False)  # 当列太多时不换行
+       pd.set_option('expand_frame_repr', False) 
        from datetime import datetime, timedelta
-       # 抓取交易对的symbol
        symbol = 'ltc_usdt'
    
-       # 构建url
+   
        url = 'https://www.okex.com/api/spot/v3/instruments'
    
-       # 抓取数据，带有浏览器伪装
+   
        headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 6.1; WOW64; rv:23.0) Gecko/20100101 Firefox/23.0'}
        request = Request(url=url, headers=headers)
        content = urlopen(request, timeout=15).read()
        content = content.decode('utf-8')
        print(content)
-       # 将数据转化为dataframe
+   
        json_data = json.loads(content)
        df = pd.DataFrame(json_data, dtype='float')
        print(df)
    ```
 
-### 买商业化的数据
+   
 
-氪金是最快的也是最花钱的方式，数据精准，获取速度快而且及时，只要钱到位，推荐不差钱的大佬使用这种方法。
+### Buy commercialized data
 
-## 获取数据遇到的坑
+Kryptonite is the fastest and most costly way to get accurate data, fast and timely, as long as the money is available, this method is recommended for big guys who don't need to spend a lot of money.
 
-一般来说你会遇到下面的问题：
+## Pitfalls encountered in acquiring data
 
-1. 数据存储
-   > 数据存储的选择一般有本地 csv、 df 等数据格式，数据库等选择有MySQL、 mongogdb更快可以也可以用时序数据库，我建议中频数据MySQL和mongodb数据库就足够用了，本地数据在使用其他终端的时候总是有一点不方便
-2. 数据清洗 这个话题展开又是一个大坑慢慢说几点
-   >数据的缺失，0值，差异的处理往往关系着你回测数据的质量，比如你从网页api获取的数据跟你通过webstock数据获取的数据是不一样的。你怎么处理两个数据的差异。明明有行情但是返回的数据里面有空值。你不注意的话还不知道这个数据对回测有什么影响。突然你的服务器挂了，有没有备份方案保证数据的完整性  等等。     
-3. 数字货币的还好，如果是股票或者期权的数据还要面临开盘时间不统一。前复权还是后复权的问题。这些都是数据获取之前，设计数据表结构的时候需要考虑到的。
+Generally you will encounter the following problems:
 
-## 总结
+1. Data storage
 
-**数据最重要的不是大而全，也不是方便易用，而是数据的质量要高**，只有把地基打牢，你才能信任你的数据。也才能进一步的展开你的下一步的想法。要不然。一个好的创意因为你的数据质量的问题，回测出一个糟糕的结果，那不是也够闹心的。
+   > Data storage options generally have local csv, df and other data formats, databases and other options have MySQL, mongogdb faster can also be used in the time series database, I recommend that the intermediate frequency data MySQL and mongodb databases will be enough to use, local data in the use of other terminals is always a little inconvenient!
+
+2. data cleaning This topic is a big pit to expand slowly say a few points
+
+   >The missing data, 0 values, differences in the handling of the data is often related to the quality of your backtest data, for example, you get the data from the web page api is not the same as the data you get through the webstock data. How do you handle the difference between the two data. Obviously there are quotes but there are null values in the returned data. You don't know how this data affects backtesting if you don't pay attention. Suddenly your server hangs, there is no backup program to ensure the integrity of the data, etc. 3.     
+
+3. digital currency is fine, if it is a stock or options data also face the opening time is not uniform. The issue of pre or post compounding. These are all things that need to be considered when designing the data table structure before data acquisition.
+
+## Summary
+
+**The most important thing about data is not that it is large and comprehensive, nor is it that it is easy to use, but that the quality of the data should be high** Only by laying a firm foundation can you trust your data. And also to further develop your next ideas. Or else. A good idea because of the quality of your data, back to test a bad result, that is not also enough to make a mess.
 
 ![](https://s2.loli.net/2023/08/12/BaSyVO14ZdDzUJx.png)
