--- a/source/_posts/量化交易之数字货币历史数据收集(三)-不写一行代码搞定币安历史数据.md
+++ b/source/_posts/量化交易之数字货币历史数据收集(三)-不写一行代码搞定币安历史数据.md
@@ -1,32 +1,32 @@
 ---
-title: 量化交易之数字货币历史数据收集(三)-不写一行代码搞定币安历史数据
+title: Quantitative trading of digital currency historical data collection (three) - not write a line of code to deal with the historical data of the Coin
 date: 2023-08-15 22:40:00
-categories:
-  - 量化交易
-tags:
-  - 历史数据
-  - 趋势策略
-  - 震荡策略
-  - 低频策略
+categories: 
+  - Currencies
+tags: 
+  - Historical Data
+  - Trend Strategy
+  - Oscillators
+  - Low Frequency Strategies
   - quant
-  - 量化交易
+  - Quantitative Trading
   - quant1098.com
-  - 币安
-description: '对于低频或者中频交易来说，收集历史行情数据是开始量化交易的第一步，只有拥有足够的历史数据，你才能方便的回测自己的代码。也才有足够的信心上实盘'
+  - Coin
+description: For low-frequency or mid-frequency trading, collecting historical market data is the first step to start quantitative trading, only with enough historical data can you easily backtest your own code. Only with enough historical data can you easily backtest your own code, and also have enough confidence to go on live trading.
 cover: https://s2.loli.net/2023/08/11/MqiRYLKPtw5Fgkc.png
 ---
 
-## 优点 
+## Pros 
 
-数据质量高，所有数据都是交易所打包好的数据，因此你可以信任交易所的数据质量。不用担心数据缺失的问题
+Data quality is high, all data is packaged by the exchange, so you can trust the exchange for data quality. No need to worry about missing data
 
-## 缺点
+## Disadvantages
 
-需要有一台服务器获取数据，要是懂一点Linux命令 就更完美了，如果不懂 就直接照抄命令， 改改参数也能用
+You need to have a server to get the data, if you know some Linux commands, it would be great, if not, just copy the commands and change the parameters.
 
-## 步骤
+## Steps
 
-### 1 直接在命令行界面输入
+### 1 Enter the command line command.
 
 ```bash
 awk 'BEGIN{for(i=2017; i<=2021; i++)for(j=1; j<=9; j++) print i"-0"j}' | xargs -I{} curl -s https://data.binance.vision/data/spot/monthly/klines/BTCUSDT/1h/BTCUSDT-1h-{}.zip -o BTCUSDT-1h-{}.zip {}
@@ -34,15 +34,15 @@ awk 'BEGIN{for(i=2017; i<=2021; i++)for(j=1; j<=9; j++) print i"-0"j}' | xargs -
 awk 'BEGIN{for(i=2017; i<=2021; i++)for(j=10; j<=12; j++) print i"-"j}' | xargs -I{} curl -s https://data.binance.vision/data/spot/monthly/klines/BTCUSDT/1h/BTCUSDT-1h-{}.zip -o BTCUSDT-1h-{}.zip {}
 ```
 
-> 第一行的意思是获取2017-2021年，从1月份到9月份的数据 
+> The first line means to get 2017-2021, from January to September data 
 >
-> 第二行的意思是获取2017-2021年，从10月份到12月份的数据 可以修改为获取天、15m等等都可以，其他币种也是可以的，修改url即可
+> The second line means get 2017-2021, from October to December You can modify it to get days, 15m and so on, other currencies are also possible, just modify the url
 
 ![2023-08-15_223115.png](https://s2.loli.net/2023/08/15/k4JDa5SeprWL93v.png)
 
-### 2 下载后是zip文件，顺便附上全部解压命令
+### 2 The download is a zip file, by the way, I've attached all the unzip commands
 
-在下载的目录下运行，即可解压全部文件（先看到最下面一幅图，把一些空的包删掉，目前只能获取到17年8月份）
+Run it in the downloaded directory to unzip all the files (see the bottom picture first, delete some empty packages, you can only get them up to August 17 at the moment)
 
 ```bash
 find . -type f -size -1k | grep zip | xargs -I{} rm {}
@@ -50,7 +50,7 @@ find . -type f -size -1k | grep zip | xargs -I{} rm {}
 ls *zip | xargs -I{} rm -rf {}
 ```
 
-### 3 数据处理
+### 3. Data processing
 
 ```bash
 df = pd.read_csv(path, header=None)
@@ -61,4 +61,4 @@ df = df[['candle_begin_time', 'open', 'high', 'low', 'close', 'volume']]
 
 ![2023-08-15_223501.png](https://s2.loli.net/2023/08/15/jX97NdglIPi2nm8.png)
 
-需要注意一下，可能有的时间没有的，文件只有几百个字节的就是空文件，删除就好了
+Need to pay attention to it, there may be time without, the file is only a few hundred bytes is empty file, delete it!
